[package]
name = "guessing-game"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "orao_vrf"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
orao-solana-vrf = { version = "0.4.0",  default-features = false, features = ["cpi"] }
solana-program = "1.18.2"